--- a/ambiata-hadron.cabal
+++ b/ambiata-hadron.cabal
@@ -15,6 +15,7 @@ library
                        base                            >= 3          && < 5
                      , ambiata-p
                      , ambiata-x-eithert
+                     , attoparsec                      >= 0.10 && < 0.13
                      , bytestring                      >= 0.10.4     && <= 0.10.8.1
                      , deepseq-generics                == 0.2.0.*
                      , semigroups                      >= 0.16       && < 0.19
@@ -34,6 +35,9 @@ library
                        Hadron.Data.Request
                        Hadron.Data.Target
                        Hadron.Data.Version
+                       Hadron.Parser.Common
+                       Hadron.Parser.Header
+                       Hadron.Parser.Request
 
 test-suite test
   type:                exitcode-stdio-1.0
@@ -51,5 +55,7 @@ test-suite test
                      , ambiata-disorder-corpus
                      , ambiata-p
                      , ambiata-hadron
+                     , attoparsec                      >= 0.10 && < 0.13
+                     , bytestring                      >= 0.10.4     && <= 0.10.8.1
                      , QuickCheck                      >= 2.8.2      && < 2.9
                      , quickcheck-instances            == 0.3.*
