--- a/ambiata-hadron.cabal
+++ b/ambiata-hadron.cabal
@@ -60,3 +60,4 @@ test-suite test
                      , bytestring                      >= 0.10.4     && <= 0.10.8.1
                      , QuickCheck                      >= 2.8.2      && < 2.9
                      , quickcheck-instances            == 0.3.*
+                     , semigroups                      >= 0.16       && < 0.19
