--- a/ambiata-hadron.cabal
+++ b/ambiata-hadron.cabal
@@ -1,6 +1,6 @@
 name:                  ambiata-hadron
 version:               0.0.1
-license:               AllRightsReserved
+license:               Apache-2.0
 author:                Ambiata <info@ambiata.com>
 maintainer:            Ambiata <info@ambiata.com>
 copyright:             (c) 2016 Ambiata.
