--- a/boris.toml
+++ b/boris.toml
@@ -1,10 +1,23 @@
 [boris]
   version = 1
+
 [build.dist-7-8]
+
 [build.dist-7-10]
+
 [build.dist-8-0]
+
+[build.dist-cabal-test]
+  command = [["./bin/ci.cabal-test"]]
+
 [build.branches-7-8]
+
 [build.branches-7-10]
+
 [build.branches-8.0]
+
+[build.branches-cabal-test]
+  command = [["./bin/ci.cabal-test"]]
+
 [build.validate]
   command = [["validate-respect"]]
