--- a/ambiata-hadron.cabal
+++ b/ambiata-hadron.cabal
@@ -15,6 +15,7 @@ library
                        base                            >= 3          && < 5
                      , ambiata-p
                      , ambiata-x-attoparsec
+                     , ambiata-x-bytestring
                      , attoparsec                      >= 0.10 && < 0.13
                      , bytestring                      >= 0.10.4     && <= 0.10.8.1
                      , deepseq-generics                == 0.2.0.*
