--- a/master.toml
+++ b/master.toml
@@ -16,12 +16,18 @@
   HADDOCK_S3 = "$AMBIATA_HADDOCK_MASTER"
   GHC_VERSION = "7.10.2"
   CABAL_VERSION = "1.22.4.0"
+  PUBLISH = "true"
+  PUBLISH_EXECUTABLES = "hadron"
+  PUBLISH_S3 = "$AMBIATA_ARTEFACTS_MASTER"
 
 [build.branches-7-10]
   HADDOCK = "true"
   HADDOCK_S3 = "$AMBIATA_HADDOCK_BRANCHES"
   GHC_VERSION = "7.10.2"
   CABAL_VERSION = "1.22.4.0"
+  PUBLISH = "true"
+  PUBLISH_EXECUTABLES = "hadron"
+  PUBLISH_S3 = "$AMBIATA_ARTEFACTS_BRANCHES"
 
 [build.dist-8-0]
   GHC_VERSION = "8.0.1"
