--- a/ambiata-hadron.cabal
+++ b/ambiata-hadron.cabal
@@ -65,6 +65,7 @@ test-suite test
                      , bytestring                      >= 0.10.4     && <= 0.10.8.1
                      , QuickCheck                      >= 2.8.2      && < 2.9
                      , quickcheck-instances            == 0.3.*
+                     , quickcheck-text                 == 0.1.*
                      , semigroups                      >= 0.16       && < 0.19
                      , text                            == 1.2.*
 
