--- a/ambiata-hadron.cabal
+++ b/ambiata-hadron.cabal
@@ -16,7 +16,7 @@ library
                      , ambiata-p
                      , ambiata-x-attoparsec
                      , ambiata-x-bytestring
-                     , attoparsec                      >= 0.10 && < 0.13
+                     , attoparsec                      >= 0.10 && < 0.14
                      , bytestring                      >= 0.10.4     && <= 0.10.8.1
                      , deepseq-generics                == 0.2.0.*
                      , semigroups                      >= 0.16       && < 0.19
@@ -61,7 +61,7 @@ test-suite test
                      , ambiata-disorder-corpus
                      , ambiata-p
                      , ambiata-hadron
-                     , attoparsec                      >= 0.10 && < 0.13
+                     , attoparsec                      >= 0.10 && < 0.14
                      , bytestring                      >= 0.10.4     && <= 0.10.8.1
                      , QuickCheck                      >= 2.8.2      && < 2.9
                      , quickcheck-instances            == 0.3.*
@@ -80,7 +80,7 @@ executable           hadron
                    , ambiata-x-optparse
                    , ambiata-x-eithert
                    , bytestring                      == 0.10.*
-                   , optparse-applicative            == 0.12.*
+                   , optparse-applicative            >= 0.11       && < 0.13
                    , text                            == 1.2.*
                    , time                            >= 1.5        && < 1.7
                    , transformers                    >= 0.4        && < 0.6
