Fix typo in GHC-8 boris build config

--- a/boris.toml
+++ b/boris.toml
@@ -14,7 +14,7 @@
 
 [build.branches-7-10]
 
-[build.branches-8.0]
+[build.branches-8-0]
 
 [build.branches-cabal-test]
   command = [["./bin/ci.cabal-test"]]
