--- a/boris.toml
+++ b/boris.toml
@@ -2,19 +2,37 @@
   version = 1
 
 [build.dist-7-8]
+  command = [
+      ["master", "build", "dist-7-8", "-C", "hadron-core"]
+    ]
 
 [build.dist-7-10]
+  command = [
+      ["master", "build", "dist-7-10", "-C", "hadron-core"]
+    ]
 
 [build.dist-8-0]
+  command = [
+      ["master", "build", "dist-8-0", "-C", "hadron-core"]
+    ]
 
 [build.dist-cabal-test]
   command = [["./bin/ci.cabal-test"]]
 
 [build.branches-7-8]
+  command = [
+      ["master", "build", "branches-7-8", "-C", "hadron-core"]
+    ]
 
 [build.branches-7-10]
+  command = [
+      ["master", "build", "branches-7-10", "-C", "hadron-core"]
+    ]
 
 [build.branches-8-0]
+  command = [
+      ["master", "build", "branches-8-0", "-C", "hadron-core"]
+    ]
 
 [build.branches-cabal-test]
   command = [["./bin/ci.cabal-test"]]
