--- a/hadron-wai/ambiata-hadron-wai.cabal
+++ b/hadron-wai/ambiata-hadron-wai.cabal
@@ -16,9 +16,12 @@ library
                      , ambiata-hadron-core
                      , ambiata-p
                      , bytestring                      >= 0.10.4     && <= 0.10.8.1
+                     , deepseq-generics                == 0.2.0.*
                      , semigroups                      >= 0.16       && < 0.19
                      , text                            == 1.2.*
                      , transformers                    >= 0.4        && < 0.6
+                     , wai                             >= 3.0 && < 3.3
+
 
   ghc-options:
                        -Wall
@@ -29,6 +32,7 @@ library
   exposed-modules:
                        Paths_ambiata_hadron_wai
                        Hadron.Wai
+                       Hadron.Wai.Error
 
 test-suite test
   type:                exitcode-stdio-1.0
