--- a/hadron-wai/ambiata-hadron-wai.cabal
+++ b/hadron-wai/ambiata-hadron-wai.cabal
@@ -15,7 +15,10 @@ library
                        base                            >= 3          && < 5
                      , ambiata-hadron-core
                      , ambiata-p
+                     , ambiata-x-eithert
+                     , attoparsec                      >= 0.10 && < 0.14
                      , bytestring                      >= 0.10.4     && <= 0.10.8.1
+                     , case-insensitive                 == 1.2.*
                      , deepseq-generics                == 0.2.0.*
                      , semigroups                      >= 0.16       && < 0.19
                      , text                            == 1.2.*
@@ -33,6 +36,7 @@ library
                        Paths_ambiata_hadron_wai
                        Hadron.Wai
                        Hadron.Wai.Error
+                       Hadron.Wai.Request
 
 test-suite test
   type:                exitcode-stdio-1.0
