--- a/hadron-wai/ambiata-hadron-wai.cabal
+++ b/hadron-wai/ambiata-hadron-wai.cabal
@@ -20,6 +20,7 @@ library
                      , bytestring                      >= 0.10.4     && <= 0.10.8.1
                      , case-insensitive                 == 1.2.*
                      , deepseq-generics                == 0.2.0.*
+                     , http-types                      >= 0.8        && < 0.10
                      , semigroups                      >= 0.16       && < 0.19
                      , text                            == 1.2.*
                      , transformers                    >= 0.4        && < 0.6
