--- a/boris-git.toml
+++ b/boris-git.toml
@@ -38,3 +38,12 @@
 
 [build.validate]
   git = "refs/heads/master"
+
+[build.submodules]
+  git = "refs/heads/master"
+
+[build.submodules-branches]
+  git = "refs/heads/topic/*"
+
+[build.rebased]
+  git = "refs/heads/master"
