--- a/boris.toml
+++ b/boris.toml
@@ -1,31 +1,47 @@
 [boris]
   version = 1
 
-[build.dist-7-10]
+[build.dist-7-10-core]
   command = [
       ["master", "build", "dist-7-10", "-C", "hadron-core"]
-    , ["master", "build", "dist-7-10", "-C", "hadron-wai"]
+    ]
+
+[build.dist-8-0-core]
+  command = [
+      ["master", "build", "dist-8-0", "-C", "hadron-core"]
+    ]
+
+[build.dist-7-10-wai]
+  command = [
+      ["master", "build", "dist-7-10", "-C", "hadron-wai"]
     ]
 
 [build.dist-8-0]
   command = [
-      ["master", "build", "dist-8-0", "-C", "hadron-core"]
-    , ["master", "build", "dist-8-0", "-C", "hadron-wai"]
+      ["master", "build", "dist-8-0", "-C", "hadron-wai"]
     ]
 
 [build.dist-cabal-test]
   command = [["./bin/ci.cabal-test"]]
 
-[build.branches-7-10]
+[build.branches-7-10-core]
   command = [
       ["master", "build", "branches-7-10", "-C", "hadron-core"]
-    , ["master", "build", "branches-7-10", "-C", "hadron-wai"]
     ]
 
-[build.branches-8-0]
+[build.branches-8-0-core]
   command = [
       ["master", "build", "branches-8-0", "-C", "hadron-core"]
-    , ["master", "build", "branches-8-0", "-C", "hadron-wai"]
+    ]
+
+[build.branches-7-10-wai]
+  command = [
+      ["master", "build", "branches-7-10", "-C", "hadron-wai"]
+    ]
+
+[build.branches-8-0-wai]
+  command = [
+      ["master", "build", "branches-8-0", "-C", "hadron-wai"]
     ]
 
 [build.branches-cabal-test]
