Run cabal-test with master

--- a/hadron-core/master.toml
+++ b/hadron-core/master.toml
@@ -12,6 +12,7 @@
   PUBLISH_EXECUTABLES = "hadron"
   PUBLISH_S3 = "$AMBIATA_ARTEFACTS_MASTER"
   CACHE="true"
+  CABAL_TEST="true"
 
 [build.branches-7-10]
   HADDOCK = "true"
@@ -22,13 +23,16 @@
   PUBLISH_EXECUTABLES = "hadron"
   PUBLISH_S3 = "$AMBIATA_ARTEFACTS_BRANCHES"
   CACHE="true"
+  CABAL_TEST="true"
 
 [build.dist-8-0]
   GHC_VERSION = "8.0.1"
   CABAL_VERSION = "1.24.0.0"
   CACHE="true"
+  CABAL_TEST="true"
 
 [build.branches-8-0]
   GHC_VERSION = "8.0.1"
   CABAL_VERSION = "1.24.0.0"
   CACHE="true"
+  CABAL_TEST="true"
