Add missing validate builds

--- a/boris.toml
+++ b/boris.toml
@@ -41,5 +41,11 @@
       ["master", "build", "branches-8-0", "-C", "hadron-wai"]
     ]
 
-[build.validate]
+[build.dist-validate]
   command = [["validate-respect"]]
+
+[build.all-rebased]
+  command = [["rebased"]]
+
+[build.all-submodules]
+  command = [["dangling-refs"]]
