--- a/boris-git.toml
+++ b/boris-git.toml
@@ -1,49 +1,11 @@
 [boris]
   version = 1
-[build.dist-7-10]
-  git = "refs/heads/master"
-[build.dist-8-0]
+
+[build.dist-*]
   git = "refs/heads/master"
 
-[build.dist-7-10-core]
-  git = "refs/heads/master"
-[build.dist-8-0-core]
-  git = "refs/heads/master"
-
-[build.dist-7-10-wai]
-  git = "refs/heads/master"
-[build.dist-8-0-wai]
-  git = "refs/heads/master"
-
-[build.dist-cabal-test]
-  git = "refs/heads/master"
-
-[build.branches-7-10]
-  git = "refs/heads/topic/*"
-[build.branches-8-0]
+[build.branches-*]
   git = "refs/heads/topic/*"
 
-[build.branches-7-10-core]
-  git = "refs/heads/topic/*"
-[build.branches-8-0-core]
-  git = "refs/heads/topic/*"
-
-[build.branches-7-10-wai]
-  git = "refs/heads/topic/*"
-[build.branches-8-0-wai]
-  git = "refs/heads/topic/*"
-
-[build.branches-cabal-test]
-  git = "refs/heads/topic/*"
-
-[build.validate]
-  git = "refs/heads/master"
-
-[build.submodules]
-  git = "refs/heads/master"
-
-[build.submodules-branches]
-  git = "refs/heads/topic/*"
-
-[build.rebased]
-  git = "refs/heads/master"
+[build.all-*]
+  git = "refs/heads/**"
